# statically

./: Cargo.toml  README.md
src/: frontmatter.rs  main.rs  page.rs
website/src/: index.html  post.md
website/src/_includes/: layout.liquid
website/src/posts/: one.md  two.md
